1. build for mipsel 2. add ffi module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,7 +120,7 @@ if("${TARGET_OS}" STREQUAL "darwin")
 elseif("${TARGET_OS}" STREQUAL "linux")
   iotjs_add_compile_flags(-D__LINUX__ -fno-builtin)
   iotjs_add_link_flags(-pthread)
-  iotjs_add_flags(EXTERNAL_LIBS m rt dbus-1 z)
+  iotjs_add_flags(EXTERNAL_LIBS m rt dbus-1 z ffi)
 elseif("${TARGET_OS}" STREQUAL "nuttx")
   iotjs_add_compile_flags(-D__NUTTX__ -Os -fno-strict-aliasing)
   iotjs_add_compile_flags(-fno-strength-reduce -fomit-frame-pointer)
