--- a/build.config
+++ b/build.config
@@ -1,11 +1,11 @@
 {
   "builddir": "",
   "buildlib": false,
-  "buildtype": "debug",
-  "clean": false,
+  "buildtype": "release",
+  "clean": true,
   "config": "",
   "cmake-param": [],
-  "compile-flag": [],
+  "compile-flag": ["-I/usr/local/include/dbus-1.0","-I/usr/local/lib/dbus-1.0/include","-L/uar/local/lib"],
   "external-include-dir": [],
   "external-lib": [],
   "jerry-cmake-param": [],
