增加cstring类型，用于获取C输出的数据。默认编译时打开debug。

--- a/mipsel.config
+++ b/mipsel.config
@@ -6,11 +6,11 @@
   "clean": true,
   "config": "",
   "cmake-param": ["-DCMAKE_TOOLCHAIN_ROOT=/opt/mips-gcc520-glibc222/bin","-DENABLE_MODULE_UART=ON","-DENABLE_MODULE_GPIO=ON","-DENABLE_MODULE_FFI=ON"],
-  "compile-flag": ["-I/home/zorro/_mips_usrdir/include/dbus-1.0","-I/home/zorro/_mips_usrdir/include","-I/home/zorro/_mips_usrdir/lib/dbus-1.0/include","-I/home/zorro/_mips_usrdir/lib/libffi-3.2.1/include","-L/home/zorro/_mips_usrdir/lib"],
+  "compile-flag": ["-I/home/zorrosopc/_mips_usrdir/include/dbus-1.0","-I/home/zorrosopc/_mips_usrdir/include","-I/home/zorrosopc/_mips_usrdir/lib/dbus-1.0/include","-I/home/zorrosopc/_mips_usrdir/lib/libffi-3.2.1/include","-L/home/zorrosopc/_mips_usrdir/lib","-DENABLE_DEBUG_LOG"],
   "external-include-dir": [],
   "external-lib": [],
   "jerry-cmake-param": [],
-  "jerry-compile-flag": [],
+  "jerry-compile-flag": ["-DENABLE_DEBUG_LOG"],
   "jerry-heaplimit": 4096,
   "jerry-link-flag": [],
   "jerry-lto": false,
